bailout.site/trunk/media/styles/style.css
/* GLOBAL */
body { background-image:url(/media/images/template/bg_gradient.png); background-repeat:repeat-x; background-position:0px 0px; margin:0; padding:0;}
#header_spacer { height:40px;}

.full_padding { padding: 20px 20px 20px 20px;}

.aligncenter, div.aligncenter { display: block;   float:none;   margin-top:10px;   margin-bottom:10px; }

.alignleft {  float: left;  margin:1.5em 1.5em 1.5em 0;}

.alignright {   float: right; margin:1.5em 1.5em 1.5em 0;}



/* TEMPLATE ITEMS */
.main_container { background-color:#ffffff;}
.white { background-color:#ffffff;}
.top_solid_box { background-color:#ffffff; height:6px;  background-image:url(/media/images/divider_bar.png); background-repeat:repeat-x;}


/* SEARCH BOX HEAD */
#search_box_header { margin-top:20px;}


/* TOP GENERAL NAV */
.top_nav_header_height { height: 30px;}

.top_nav_bg { background-image:url(/media/images/template/top_nav_bg.png); margin:0; padding:5px 0 0 0;}

#top_nav_header { text-align:right;}
#top_nav_header ul { margin:0; padding:0;}
#top_nav_header li { margin:0; padding:0; display:inline; padding-left:20px;}
#top_nav_header li.last { padding-right:20px;}

#top_nav_header a:link { color:#4380b0; text-decoration:none;}
#top_nav_header a:visited {color:#4380b0; text-decoration:none;}
#top_nav_header a:hover {color:#000000; text-decoration:underline;}
#top_nav_header a:active {color:#4380b0; text-decoration:none;}


/* Logo Box */
#logo_box { margin:0; padding:0;}

h1.technique-eight {
	width: 200px; height: 83px;
	position: relative;
	overflow:hidden;
	margin:0; padding:0;
	}
h1.technique-eight span {
		background: url(/media/images/ss_logo.png);
		position: absolute;
		width: 100%;
		height: 100%;
	}


/* Top Nav SECTORS */
#header_spacer { height:20px;}

#mailing_list_box { }

/* email updates */
#mailing_list_box {color:#2f4867; font-size:12px; text-align:right; padding:10px 20px 0 0; font-family:Helvetica Neue, Arial, Helvetica, sans-serif; margin:0;}
#mailing_list_box input { margin-right:5px; padding:0;}
#update_email {padding:0 0 0 0; margin:0;}
#update_email .submit { border:1px solid #899eab; color#:2f4867; background-color:#f6f8fb; padding:0 3px 0 3px;}
#email-validation-error { background-color: #ffff88; color: black; border: 1px solid black; padding: 5px; float: right; margin-right: 20px; display: none;}

#search_box { }

/* email updates */
#search_box {color:#2f4867; font-size:12px; text-align:right; padding:10px 20px 0 0; font-family:Helvetica Neue, Arial, Helvetica, sans-serif; margin:0;}
#search_box input { margin-right:5px; padding:0; font-size: 14px;}
#search_form  {padding:0 0 0 0; margin:0;}
#search_form .submit { border:1px solid #899eab; color#:2f4867; background-color:#f6f8fb; padding:0 3px 0 3px;}





/* NAVBAR */

/* NAVBAR */
#navbar { background-color:#336699; padding:5px 0 0 0; margin:0; height:27px; background-image:url(/media/images/template/sector_nav_bg.png); background-position: 0px -7px; overflow:hidden;}
#navbar_items ul { margin:0; padding:0;}
#navbar_items li { display:inline; font-family:verdana; font-weight:bold; color:#ffffff; padding: 8px 20px 0 0;}

.navbar_item_coming_soon { color:#000000;}
#navbar_items a { padding: 8px 10px; }

#navbar_items a:link { color: #fff; text-decoration: none; }
#navbar_items a:visited { color: #fff; text-decoration: none; }
#navbar_items a:hover {  text-decoration:underline;}

#navbar li.inactive_top a { display:inline; font-family:verdana; font-weight:bold; color:#ccc; padding: 8px 20px 0 0;}


#navbar li.active_top a { background-image:url(/media/images/template/sector_nav_selected_bg.png); color:#2b5b8e; border-top:1px solid #2f4867;
	border-left:1px solid #2f4867; border-right:1px solid #2f4867; padding-bottom:10px; background-position: 0px 1px; background-repeat:repeat-x;}

    #navbar li.active_top a:visited { color:#2b5b8e;}
    #navbar li.active_top a:hover { color:#2b5b8e;}
    #navbar li.active_top a:active { color:#2b5b8e;}    

#sector_subnav {  padding:10px 0 0 10px; background-image:url(/media/images/template/sector_subnav_bg.png); background-repeat:repeat-x; height:25px; background-position:bottom;}
#sector_subnav_items ul { margin:0; padding:0;}
#sector_subnav_items li { display:inline; padding:0; padding-right:40px; font-family:verdana; font-weight:normal;}

#sector_subnav_items a { padding:0px; margin:0; }
#sector_subnav_items a:link { color: #435c7a; text-decoration: none; }
#sector_subnav_items a:visited { color: #435c7a; text-decoration: none; }
#sector_subnav_items a:hover {  text-decoration:underline;}


/* CONTENT AREA */
#header_area {margin:10px 20px 20px 20px; background-image:url(/media/images/double_lines.gif); background-position:bottom; background-repeat:repeat-x;}
#header_area h2 { font-size:12px; margin:0 0 5px 0; padding:0; color:#a5a5a5; text-transform:uppercase;}
#header_area h3 { font-size:20px; margin:0; padding:0 0 10px 0; line-height:24px;}

#header_area_flat {margin:20px 20px 20px 20px; background-image:url(/media/images/double_lines.gif); background-position:bottom; background-repeat:repeat-x;}
#header_area_flat h2 { font-size:12px; margin:0 0 5px 0; padding:0; color:#a5a5a5; text-transform:uppercase;}
#header_area_flat h3 { font-size:20px; margin:0; padding:0 0 10px 0; line-height:24px;}


#content_area { margin:20px;}
#content_area p { width:850px; font-size: 120%; } 
#content_area ol, #content_area ul { font-size: 120%; }
.non_content { margin:20px 0 20px 0; padding:0 20px 0 20px;}

.attribution { font-size: 0.9em; margin-bottom: 20px; display:block; text-align:right; padding-right:20px;}
.source_download {padding-left:20px;}


/* FOOTER */
.footer_container { padding-top:20px; background-repeat:repeat-x; padding:20px 0 20px 0; border-top:1px solid #c6c6c6; }

h4.footer { font-size:12px; margin:0; padding:0;}
#footer_list { margin:0; padding:0; font-size:10px;}
#footer_list ul { margin:0; padding:0;}
#footer_list li { margin:0; padding:0;}

#footer_list a:link { text-decoration:none; color:#666666;}
/* ... */

